--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.css" integrity="sha384-ko6T2DjISesD0S+wOIeHKMyKsHvWpdQ1s/aiaQMbL+TIXx3jg6uyf9hlv3WWfwYv" crossorigin="anonymous">
-		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.js" integrity="sha384-tsPOhveNsi36uhglzMBNOAA2xd7LlEqQuQHFKi4DwP+6UKrrLGub1MD77Zx18F8e" crossorigin="anonymous"></script>
-		<link rel="icon" href="./favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.css"
+      integrity="sha384-ko6T2DjISesD0S+wOIeHKMyKsHvWpdQ1s/aiaQMbL+TIXx3jg6uyf9hlv3WWfwYv"
+      crossorigin="anonymous"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.js"
+      integrity="sha384-tsPOhveNsi36uhglzMBNOAA2xd7LlEqQuQHFKi4DwP+6UKrrLGub1MD77Zx18F8e"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" href="./favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-702af894.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-236755b2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b4723079.js">
+		<link rel="modulepreload" href="./_app/immutable/start-2643abf3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-755aafe2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-de3f1860.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-e3bf86e7.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-ae286dd8.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-202c4ae5.js">
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-887e55d5.js">
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">
 
 
 
@@ -47,13 +57,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1kzw1ac">
-			import { start } from "./_app/immutable/start-b4723079.js";
+			import { start } from "./_app/immutable/start-2643abf3.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1kzw1ac"]').parentNode,
-				version: "1675493235799",
+				version: "1675499403737",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -63,5 +73,5 @@
 			});
 		</script>
 	</div>
-	</body>
+  </body>
 </html>
