--- a/index.html
+++ b/index.html
@@ -17,53 +17,57 @@
     <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-702af894.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-236755b2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-2643abf3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-755aafe2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-de3f1860.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e3bf86e7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-ae286dd8.js">
+		<link href="./_app/immutable/assets/_layout-217f1f00.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page-04df0cde.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-4be41a9d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-e915f37f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-0dbb8020.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-ab1a2b14.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9edd07f5.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-887e55d5.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-e0bb17f7.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
 
 
 
-<div class="container"><div class="render-container"></div>
-  <div class="sidebar"><div class="sidebar-row">Depth<div class="number-input"><input type="text" value="10">
-  <div class="number-input-buttons"><div class="number-input-up"><i></i></div>
-    <div class="number-input-down"><i></i></div></div></div></div>
-    <div class="sidebar-row"><input type="checkbox" name="isometry1" checked>Isometry 1
-      <div class="combined-elements"><span class="latex"></span>
-        <div class="matrix-input-container"><div class="matrix-input"><input type="text" value="">
+<div class="container svelte-1werfvq"><div class="render-container svelte-1werfvq"></div>
+  <div class="sidebar svelte-1werfvq"><div class="sidebar-row svelte-1werfvq">Depth<div class="input svelte-jh3nii"><input type="text" class="svelte-jh3nii" value="10">
+  <div class="input-buttons svelte-jh3nii"><div class="input-up svelte-jh3nii"><i class="svelte-jh3nii"></i></div>
+    <div class="input-down svelte-jh3nii"><i class="svelte-jh3nii"></i></div></div>
+</div></div>
+    <div class="sidebar-row svelte-1werfvq"><input type="checkbox" name="isometry1" class="svelte-1werfvq" checked>Isometry 1
+      <div class="combined-elements svelte-1werfvq"><span class="latex svelte-19rek1j"></span>
+        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value="">
     <input type="text" value="">
     <input type="text" value="">
-    <input type="text" value=""></div></div>
-        <span class="latex"></span></div></div>
-    <div class="sidebar-row"><input type="checkbox" name="isometry2" checked>Isometry 2
-      <div class="combined-elements"><span class="latex"></span>
-        <div class="matrix-input-container"><div class="matrix-input"><input type="text" value="">
+    <input type="text" value=""></div>
+</div>
+        <span class="latex svelte-19rek1j"></span></div></div>
+    <div class="sidebar-row svelte-1werfvq"><input type="checkbox" name="isometry2" class="svelte-1werfvq" checked>Isometry 2
+      <div class="combined-elements svelte-1werfvq"><span class="latex svelte-19rek1j"></span>
+        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value="">
     <input type="text" value="">
     <input type="text" value="">
-    <input type="text" value=""></div></div>
-        <span class="latex"></span></div></div>
-    <div class="sidebar-row"><div class="centering"><div class="plane-input svelte-1ss91bd"><div class="plane-input-point svelte-1ss91bd"></div>
+    <input type="text" value=""></div>
+</div>
+        <span class="latex svelte-19rek1j"></span></div></div>
+    <div class="sidebar-row svelte-1werfvq"><div class="centering svelte-1werfvq"><div class="plane-input svelte-1ss91bd"><div class="plane-input-point svelte-1ss91bd"></div>
 </div></div></div>
-    <div class="sidebar-row">Theme <select><option value="Light">Light</option><option value="Dark">Dark</option></select></div></div></div>
+    <div class="sidebar-row svelte-1werfvq">Theme <select><option value="Light">Light</option><option value="Dark">Dark</option></select></div></div>
+</div>
 
 
-		<script type="module" data-sveltekit-hydrate="1kzw1ac">
-			import { start } from "./_app/immutable/start-2643abf3.js";
+		<script type="module" data-sveltekit-hydrate="bfn048">
+			import { start } from "./_app/immutable/start-4be41a9d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1kzw1ac"]').parentNode,
-				version: "1675499872101",
+				target: document.querySelector('[data-sveltekit-hydrate="bfn048"]').parentNode,
+				version: "1675504573225",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
