--- a/index.html
+++ b/index.html
@@ -8,66 +8,64 @@
       integrity="sha384-ko6T2DjISesD0S+wOIeHKMyKsHvWpdQ1s/aiaQMbL+TIXx3jg6uyf9hlv3WWfwYv"
       crossorigin="anonymous"
     />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.js"
-      integrity="sha384-tsPOhveNsi36uhglzMBNOAA2xd7LlEqQuQHFKi4DwP+6UKrrLGub1MD77Zx18F8e"
-      crossorigin="anonymous"
-    ></script>
     <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-217f1f00.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-04df0cde.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-4be41a9d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e915f37f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-0dbb8020.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-ab1a2b14.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9edd07f5.js">
+		<link href="./_app/immutable/assets/_page-b4578c7f.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-49e563b4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-e2188b86.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-84b8a951.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-1d176bfa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-77b43a3d.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-e0bb17f7.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-facf9ec3.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
 
 
 
-<div class="container svelte-1werfvq"><div class="render-container svelte-1werfvq"></div>
-  <div class="sidebar svelte-1werfvq"><div class="sidebar-row svelte-1werfvq">Depth<div class="input svelte-jh3nii"><input type="text" class="svelte-jh3nii" value="10">
+<div class="container svelte-8eu7mk"><div class="render-container svelte-8eu7mk"></div>
+  <div class="sidebar svelte-8eu7mk"><div class="sidebar-row svelte-8eu7mk">Depth<div class="input svelte-jh3nii"><input type="text" class="svelte-jh3nii" value="10">
   <div class="input-buttons svelte-jh3nii"><div class="input-up svelte-jh3nii"><i class="svelte-jh3nii"></i></div>
     <div class="input-down svelte-jh3nii"><i class="svelte-jh3nii"></i></div></div>
 </div></div>
-    <div class="sidebar-row svelte-1werfvq"><input type="checkbox" name="isometry1" class="svelte-1werfvq" checked>Isometry 1
-      <div class="combined-elements svelte-1werfvq"><span class="latex svelte-19rek1j"></span>
+    <div class="sidebar-row svelte-8eu7mk"><input type="checkbox" name="isometry1" class="svelte-8eu7mk" checked>Isometry 1
+      <div class="combined-elements svelte-8eu7mk"><span class="latex svelte-19rek1j"></span>
         <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value="">
     <input type="text" value="">
     <input type="text" value="">
     <input type="text" value=""></div>
 </div>
         <span class="latex svelte-19rek1j"></span></div></div>
-    <div class="sidebar-row svelte-1werfvq"><input type="checkbox" name="isometry2" class="svelte-1werfvq" checked>Isometry 2
-      <div class="combined-elements svelte-1werfvq"><span class="latex svelte-19rek1j"></span>
+    <div class="sidebar-row svelte-8eu7mk"><input type="checkbox" name="isometry2" class="svelte-8eu7mk" checked>Isometry 2
+      <div class="combined-elements svelte-8eu7mk"><span class="latex svelte-19rek1j"></span>
         <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value="">
     <input type="text" value="">
     <input type="text" value="">
     <input type="text" value=""></div>
 </div>
         <span class="latex svelte-19rek1j"></span></div></div>
-    <div class="sidebar-row svelte-1werfvq"><div class="centering svelte-1werfvq"><div class="plane-input svelte-1ss91bd"><div class="plane-input-point svelte-1ss91bd"></div>
+    <div class="sidebar-row svelte-8eu7mk"><div class="row-center svelte-8eu7mk"><div class="plane-input svelte-1ss91bd"><div class="plane-input-point svelte-1ss91bd"></div>
 </div></div></div>
-    <div class="sidebar-row svelte-1werfvq">Theme <select><option value="Light">Light</option><option value="Dark">Dark</option></select></div></div>
+    <div class="sidebar-row svelte-8eu7mk">Theme <select><option value="Light">Light</option><option value="Dark">Dark</option></select></div>
+    <div class="sidebar-row svelte-8eu7mk"><button>Animate! (1)</button>
+      <button>Animate! (2)</button></div></div>
+  <a href="https://github.com/ariymarkowitz/H3-Visualiser" class="github svelte-8eu7mk" draggable="false" target="_blank" rel="noopener noreferrer"><img src="/github-mark.svg" alt="link to github" width="40" height="40" draggable="false"></a>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="bfn048">
-			import { start } from "./_app/immutable/start-4be41a9d.js";
+		<script type="module" data-sveltekit-hydrate="1f7honm">
+			import { start } from "./_app/immutable/start-49e563b4.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="bfn048"]').parentNode,
-				version: "1675504573225",
+				target: document.querySelector('[data-sveltekit-hydrate="1f7honm"]').parentNode,
+				version: "1675579566617",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
