--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-217f1f00.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-b4578c7f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-49e563b4.js">
+		<link rel="modulepreload" href="./_app/immutable/start-6bdc944e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-e2188b86.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-84b8a951.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-1d176bfa.js">
@@ -21,7 +21,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-77b43a3d.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-facf9ec3.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-e90727b3.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
@@ -54,18 +54,18 @@
     <div class="sidebar-row svelte-8eu7mk">Theme <select><option value="Light">Light</option><option value="Dark">Dark</option></select></div>
     <div class="sidebar-row svelte-8eu7mk"><button>Animate! (1)</button>
       <button>Animate! (2)</button></div></div>
-  <a href="https://github.com/ariymarkowitz/H3-Visualiser" class="github svelte-8eu7mk" draggable="false" target="_blank" rel="noopener noreferrer"><img src="/github-mark.svg" alt="link to github" width="40" height="40" draggable="false"></a>
+  <a href="https://github.com/ariymarkowitz/H3-Visualiser" class="github svelte-8eu7mk" draggable="false" target="_blank" rel="noopener noreferrer"><img src="github-mark.svg" alt="Link to GitHub" width="40" height="40" draggable="false"></a>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1f7honm">
-			import { start } from "./_app/immutable/start-49e563b4.js";
+		<script type="module" data-sveltekit-hydrate="155ip5p">
+			import { start } from "./_app/immutable/start-6bdc944e.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1f7honm"]').parentNode,
-				version: "1675579566617",
+				target: document.querySelector('[data-sveltekit-hydrate="155ip5p"]').parentNode,
+				version: "1675579872428",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
