--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-217f1f00.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-b4578c7f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-df0058f0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e2188b86.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-84b8a951.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-1d176bfa.js">
+		<link rel="modulepreload" href="./_app/immutable/start-a1f3e58f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-d3784472.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-0c62c677.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-7aeb220b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-77b43a3d.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-b8bd015b.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-10afe5a4.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-6d5be0f8.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
@@ -35,18 +35,12 @@
 </div></div>
     <div class="sidebar-row svelte-8eu7mk"><input type="checkbox" name="isometry1" class="svelte-8eu7mk" checked>Isometry 1
       <div class="combined-elements svelte-8eu7mk"><span class="latex svelte-19rek1j"></span>
-        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value="">
-    <input type="text" value="">
-    <input type="text" value="">
-    <input type="text" value=""></div>
+        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""></div>
 </div>
         <span class="latex svelte-19rek1j"></span></div></div>
     <div class="sidebar-row svelte-8eu7mk"><input type="checkbox" name="isometry2" class="svelte-8eu7mk" checked>Isometry 2
       <div class="combined-elements svelte-8eu7mk"><span class="latex svelte-19rek1j"></span>
-        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value="">
-    <input type="text" value="">
-    <input type="text" value="">
-    <input type="text" value=""></div>
+        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""></div>
 </div>
         <span class="latex svelte-19rek1j"></span></div></div>
     <div class="sidebar-row svelte-8eu7mk"><div class="row-center svelte-8eu7mk"><div class="plane-input svelte-1ss91bd"><div class="plane-input-point svelte-1ss91bd"></div>
@@ -58,14 +52,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="155ip5p">
-			import { start } from "./_app/immutable/start-df0058f0.js";
+		<script type="module" data-sveltekit-hydrate="1rx2cvx">
+			import { start } from "./_app/immutable/start-a1f3e58f.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="155ip5p"]').parentNode,
-				version: "1675581124800",
+				target: document.querySelector('[data-sveltekit-hydrate="1rx2cvx"]').parentNode,
+				version: "1675891373974",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
