--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,9 @@
       integrity="sha384-ko6T2DjISesD0S+wOIeHKMyKsHvWpdQ1s/aiaQMbL+TIXx3jg6uyf9hlv3WWfwYv"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" sizes="16x16" href="%sveltekit.assets%/favicon16x.png" />
+    <link rel="icon" sizes="32x32" href="%sveltekit.assets%/favicon32x.png" />
+    <link rel="icon" sizes="128x128" href="%sveltekit.assets%/favicon128x.png" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
