--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       integrity="sha384-ko6T2DjISesD0S+wOIeHKMyKsHvWpdQ1s/aiaQMbL+TIXx3jg6uyf9hlv3WWfwYv"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="./favicon.png" />
+    <link rel="icon" sizes="16x16" href="./favicon16x.png" />
+    <link rel="icon" sizes="32x32" href="./favicon32x.png" />
+    <link rel="icon" sizes="128x128" href="./favicon128x.png" />
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-217f1f00.css" rel="stylesheet">
@@ -59,7 +61,7 @@
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1rx2cvx"]').parentNode,
-				version: "1675891373974",
+				version: "1678251818649",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
