--- a/index.html
+++ b/index.html
@@ -13,63 +13,22 @@
     <link rel="icon" sizes="128x128" href="./favicon128x.png" />
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-217f1f00.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-b4578c7f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a1f3e58f.js">
+		<link rel="modulepreload" href="./_app/immutable/start-7d2d3f3a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-d3784472.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-0c62c677.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-7aeb220b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-02c98e81.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-b8bd015b.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-6d5be0f8.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
-
-
-
-<div class="container svelte-8eu7mk"><div class="render-container svelte-8eu7mk"></div>
-  <div class="sidebar svelte-8eu7mk"><div class="sidebar-row svelte-8eu7mk">Depth<div class="input svelte-jh3nii"><input type="text" class="svelte-jh3nii" value="10">
-  <div class="input-buttons svelte-jh3nii"><div class="input-up svelte-jh3nii"><i class="svelte-jh3nii"></i></div>
-    <div class="input-down svelte-jh3nii"><i class="svelte-jh3nii"></i></div></div>
-</div></div>
-    <div class="sidebar-row svelte-8eu7mk"><input type="checkbox" name="isometry1" class="svelte-8eu7mk" checked>Isometry 1
-      <div class="combined-elements svelte-8eu7mk"><span class="latex svelte-19rek1j"></span>
-        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""></div>
-</div>
-        <span class="latex svelte-19rek1j"></span></div></div>
-    <div class="sidebar-row svelte-8eu7mk"><input type="checkbox" name="isometry2" class="svelte-8eu7mk" checked>Isometry 2
-      <div class="combined-elements svelte-8eu7mk"><span class="latex svelte-19rek1j"></span>
-        <div class="matrix-input-container svelte-175mkfe"><div class="matrix-input svelte-175mkfe"><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""></div>
-</div>
-        <span class="latex svelte-19rek1j"></span></div></div>
-    <div class="sidebar-row svelte-8eu7mk"><div class="row-center svelte-8eu7mk"><div class="plane-input svelte-1ss91bd"><div class="plane-input-point svelte-1ss91bd"></div>
-</div></div></div>
-    <div class="sidebar-row svelte-8eu7mk">Theme <select><option value="Light">Light</option><option value="Dark">Dark</option></select></div>
-    <div class="sidebar-row svelte-8eu7mk"><button>Animate! (1)</button>
-      <button>Animate! (2)</button></div></div>
-  <a href="https://github.com/ariymarkowitz/H3-Visualiser" class="github svelte-8eu7mk" draggable="false" target="_blank" rel="noopener noreferrer"><img src="github-mark.svg" alt="Link to GitHub" width="40" height="40" draggable="false"></a>
-</div>
-
-
-		<script type="module" data-sveltekit-hydrate="1rx2cvx">
-			import { start } from "./_app/immutable/start-a1f3e58f.js";
+		<script type="module" data-sveltekit-hydrate="45h">
+			import { start } from "./_app/immutable/start-7d2d3f3a.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1rx2cvx"]').parentNode,
-				version: "1678251818649",
-				hydrate: {
-					node_ids: [0, 2],
-					data: [null,null],
-					form: null,
-					error: null
-				}
+				target: document.querySelector('[data-sveltekit-hydrate="45h"]').parentNode,
+				version: "1696381033742"
 			});
-		</script>
-	</div>
+		</script></div>
   </body>
 </html>
