--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" sizes="32x32" href="/favicon32x.png" />
     <link rel="icon" sizes="128x128" href="/favicon128x.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>h3-svelte5</title>
+    <title>H3 Visualiser</title>
   </head>
   <body>
     <div id="app"></div>
